--- a/catalogue-service/src/main/resources/application.properties
+++ b/catalogue-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.application.name=wallet-service
-server.port=8085
+spring.application.name=catalogue-service
+server.port=8083
 
 spring.data.mongodb.uri=mongodb+srv://max:@cluster-test.ozxfc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-spring.data.mongodb.database=test2
+spring.data.mongodb.database=casetest
+
