--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=product-service
 server.port=8082
 
-spring.data.mongodb.uri=mongodb+srv://max:levi9357@cluster-test.ozxfc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://max:@cluster-test.ozxfc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 spring.data.mongodb.database=casetest
