Adding Order&Cart service, Order service completed, Cart sercive -chekout

--- a/wallet-service/src/main/resources/application.properties
+++ b/wallet-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=wallet-service
 server.port=8085
 
-spring.data.mongodb.uri=mongodb+srv://max:@cluster-test.ozxfc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://@cluster-test.ozxfc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 spring.data.mongodb.database=test2
