--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.application.name=catalogue-service
-server.port=8083
+spring.application.name=cart-service
+server.port=8084
 
 spring.data.mongodb.uri=mongodb+srv://@cluster-test.ozxfc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-spring.data.mongodb.database=casetest
-
+spring.data.mongodb.database=eshop_orders_cart
