--- a/catalogue-service/src/main/resources/application.properties
+++ b/catalogue-service/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=catalogue-service
 server.port=8083
 
 spring.data.mongodb.uri=mongodb+srv://@cluster-test.ozxfc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-spring.data.mongodb.database=casetest
+spring.data.mongodb.database=eshop_products
 
