--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=product-service
 server.port=8082
 
 spring.data.mongodb.uri=mongodb+srv://@cluster-test.ozxfc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-spring.data.mongodb.database=casetest
+spring.data.mongodb.database=eshop_products
