--- a/wallet-service/src/main/resources/application.properties
+++ b/wallet-service/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=wallet-service
 server.port=8085
 
 spring.data.mongodb.uri=mongodb+srv://@cluster-test.ozxfc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-spring.data.mongodb.database=test2
+spring.data.mongodb.database=eshop_wallet
