--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=user-service
 server.port=8081
 
-spring.data.mongodb.uri=mongodb+srv://max:levi9357@cluster-test.ozxfc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://@cluster-test.ozxfc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 spring.data.mongodb.database=eshop_users
