test db jwt  authentication added to api gateway

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -7,6 +7,11 @@ zuul.routes.wallet.url=http://localhost:8085/wallet/
 
 ribbon.eureka.enabled=false
 
+spring.data.mongodb.uri=mongodb+srv://max:levi0795@cluster-test.ozxfc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+spring.data.mongodb.database=test2
+
 server.port=8080
 
 management.endpoints.web.exposure.include=routes,filters
+
+jwt.secret = eshopzone;
