Angular routing changed to api gateway and manging CORS

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 zuul.routes.user.url=http://localhost:8081/users/
 zuul.routes.product.url=http://localhost:8082/product/
-zuul.routes.catelogue.url=http://localhost:8083/catalogue/
+zuul.routes.catalogue.url=http://localhost:8083/catalogue/
 zuul.routes.cart.url=http://localhost:8084/cart/
 zuul.routes.order.url=http://localhost:8084/orders/
 zuul.routes.wallet.url=http://localhost:8085/wallet/
@@ -8,7 +8,7 @@ zuul.routes.wallet.url=http://localhost:8085/wallet/
 ribbon.eureka.enabled=false
 
 spring.data.mongodb.uri=mongodb+srv://max:levi0795@cluster-test.ozxfc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-spring.data.mongodb.database=test2
+spring.data.mongodb.database=eshop_users
 
 server.port=8080
 
