--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-zuul.routes.user.url=http://localhost:8081/users/
+zuul.routes.users.url=http://localhost:8081/users/
 zuul.routes.product.url=http://localhost:8082/product/
 zuul.routes.catalogue.url=http://localhost:8083/catalogue/
 zuul.routes.cart.url=http://localhost:8084/cart/
-zuul.routes.order.url=http://localhost:8084/orders/
+zuul.routes.orders.url=http://localhost:8084/orders/
 zuul.routes.wallet.url=http://localhost:8085/wallet/
 
 ribbon.eureka.enabled=false
