Updating api gateway as eureka client

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,17 +1,27 @@
-zuul.routes.users.url=http://localhost:8081/users/
-zuul.routes.product.url=http://localhost:8082/product/
-zuul.routes.catalogue.url=http://localhost:8083/catalogue/
-zuul.routes.cart.url=http://localhost:8084/cart/
-zuul.routes.orders.url=http://localhost:8084/orders/
-zuul.routes.wallet.url=http://localhost:8085/wallet/
-
-ribbon.eureka.enabled=false
-
-spring.data.mongodb.uri=mongodb+srv://max:levi0795@cluster-test.ozxfc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-spring.data.mongodb.database=eshop_users
-
 server.port=8080
+
+spring.application.name=api-gateway
+
+eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+
+jwt.secret = eshopzone;
 
 management.endpoints.web.exposure.include=routes,filters
 
-jwt.secret = eshopzone;
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds= 30000
+
+ribbon.ReadTimeout: 60000
+ribbon.connection-timeout: 3000
+ribbon.eureka.enabled: true
+
+zuul.ignoredServices: '*'
+zuul.host.
+zuul.host.time-to-live: -1
+zuul.host.connect-timeout-millis: 5000
+zuul.host.max-per-route-connections: 10000
+zuul.host.max-total-connections: 5000
+zuul.host.socket-timeout-millis: 60000
+zuul.semaphore.max-semaphores: 500
